Sub requests are now executed on data nodes