@@ -2,36 +2,37 @@ package lapesd.saturnus.data;
 
 import desmoj.core.simulator.Entity;
 import desmoj.core.simulator.Model;
-import desmoj.core.simulator.Queue;
-import lapesd.saturnus.event.Task;
+import desmoj.core.simulator.TimeSpan;
+import lapesd.saturnus.event.SubRequest;
+
+import java.util.Vector;
 
 public class DataNode extends Entity {
 
     private double nodeClock;
-    private Queue<Task> tasksQueue;
+    private Vector<SubRequest> subRequestsQueue;
 
     public DataNode(Model model) {
         super(model, "DataNode", true);
         this.nodeClock = 0.0;
-        this.tasksQueue = new Queue<Task>(model, "Task queue: " + this, true, true);
+        this.subRequestsQueue = new Vector<SubRequest>();
     }
 
-    public double incrementNodeClock(double value) {
-        return this.nodeClock += value;
-    }
-
-    public void insertTaskToQueue(Task newTask) {
-        this.tasksQueue.insert(newTask);
+    public void insertSubRequest(SubRequest subReq) {
+        this.subRequestsQueue.add(subReq);
     }
 
     public void execute() {
-        int queueSize = this.tasksQueue.size();
+        int queueSize = this.subRequestsQueue.size();
         for (int i = 0; i < queueSize; i++) {
-            removeFirstTask().execute();
+            SubRequest toBeExecuted = removeFirstSubRequest();
+            toBeExecuted.schedule(toBeExecuted.getRequest(), this, new TimeSpan(nodeClock));
+            this.nodeClock++;
         }
     }
 
-    private Task removeFirstTask() {
-        return this.tasksQueue.removeFirst();
+    private SubRequest removeFirstSubRequest() {
+        return this.subRequestsQueue.remove(0);
     }
+
 }
